test_suite/alan-2022-examples/failing/006000_mutation.alan
source R begin leave 9 = [end
